--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,8 @@ Django==5.2.8
 django-cors-headers==4.9.0
 django-filter==25.2
 djangorestframework==3.16.1
+djangorestframework-simplejwt==5.3.1
+python-dotenv==1.0.1
 drf-spectacular==0.29.0
 fonttools==4.60.1
 inflection==0.5.1
