--- a/web/package.json
+++ b/web/package.json
@@ -15,6 +15,7 @@
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^5.2.2",
     "@react-router/node": "^7.9.2",
+    "cookie": "^1.0.2",
     "dotenv": "^17.2.3",
     "isbot": "^5.1.31",
     "react": "^18.2.0",
