--- a/web/package.json
+++ b/web/package.json
@@ -14,6 +14,7 @@
     "@headlessui/react": "^2.2.9",
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^5.2.2",
+    "@preact/signals-react": "^3.6.1",
     "@react-router/node": "^7.9.2",
     "cookie": "^1.0.2",
     "dotenv": "^17.2.3",
